# config_clean

./: .gitignore  MANIFEST.in  build_all.sh  lib_download.sh  main.py  pyproject.toml  requirements.txt
backend/: config_cleaner.db  crud.py  database.py  main.py  models.py  schemas.py
backend/api/: api.py
backend/api/endpoints/: batches.py  files.py  keywords.py
backend/services/: clean_1.py  clean_2.py  file_service.py  keyword_service.py
backend/static/js/: file-manager.js  keyword-manager.js  upload.js
backend/static/uploads/batch_1_20251021234049/cleaned_1/: ASA-1.txt_cleaned.txt
backend/static/uploads/batch_4_20251021234745/cleaned_1/: S4-7609.cfg_cleaned.cfg
backend/static/uploads/batch_4_20251021234745/cleaned_2/: S4-7609.cfg_cleaned_cleaned2.json
backend/static/uploads/batch_5_20251022111618/cleaned_2/: Checkpoint-3.txt_cleaned_cleaned2.json
backend/static/uploads/batch_5_20251022111618/original/: Checkpoint-3.txt
backend/templates/: file-manager.html  index.html
configs/: ASA-1.txt  Arista-1.txt  Arista-1.txt_cleaned.txt  Catalyst9500-S3.cfg  Catalyst9500-S3.cfg_cleaned.cfg  JUNIPER-2.txt  S1-7609.cfg  S4-7609.cfg  chckpoint1.txt  pa.cfg  test.textfsm  test111.txt
scripts/: check.py  clean_2.py  clean_2_2.py  clean_3.py  clean_4.py  clean_config.py  clean_config2.py  clean_config3.py  clean_test.py  config_keyword_detailed.json  configs_summary.json  main.py
templates/: file-manager.html  index.html  keyword-manager.html
