[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ky-match"
version = "0.1.0"
description = "Ky Match project with FastAPI and dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "click==8.3.0",
    "fastapi==0.119.1",
    "h11==0.16.0",
    "idna==3.11",
    "pyahocorasick==2.2.0",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "python-multipart==0.0.20",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.48.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0"
]

[tool.setuptools]
package-dir = {"" = "backend"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["backend"]
include = ["*"]

[tool.setuptools.package-data]
"backend" = ["**/*"]